<resources>
    <string name="app_name">Tax_Calculator</string>
    <string name="hint_principal">Principal Amount ₹</string>
    <string name="hint_interest">Interest rate per Year %</string>
    <string name="hint_years">How Many Years</string>
    <string name="hint_emi">EMI ₹</string>
    <string name="hint_interest_total">Total Interest for Loan ₹</string>
    <string name="tax_calculator">Tax Calculator</string>
    <string name="enter_your_income">Enter your Income:</string>
    <string name="amount">Amount</string>
    <string name="type_your_income">Type your income</string>
</resources>