<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EMIActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_principal"
            android:layout_width="392dp"
            android:layout_height="56dp"
            android:layout_marginBottom="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <EditText
                android:id="@+id/principal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789."
                android:hint="@string/hint_principal"
                android:inputType="number"
                android:singleLine="true"
                tools:ignore="Autofill" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_interest"
            android:layout_width="392dp"
            android:layout_height="56dp"
            android:layout_marginBottom="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/interest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789."
                android:hint="@string/hint_interest"
                android:inputType="number"
                android:singleLine="true"
                tools:ignore="Autofill" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/input_layout_tenure"
            android:layout_width="392dp"
            android:layout_height="56dp"
            android:layout_marginBottom="50dp">

            <EditText
                android:id="@+id/years"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789."
                android:hint="@string/hint_years"
                android:inputType="number"
                tools:ignore="Autofill" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_calculate2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="Calculate"
            android:textColor="#DDDAE3"
            android:textColorHighlight="#2E30B5"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />

        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/input_layout_emi"
            android:layout_width="392dp"
            android:layout_height="56dp"
            android:layout_marginTop="50dp">

            <EditText
                android:id="@+id/emi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_emi"
                android:inputType="number"
                android:maxEms="0"
                tools:ignore="Autofill" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/input_layout_total_Interest"
            android:layout_width="392dp"
            android:layout_height="56dp"
            android:layout_marginTop="50dp">

            <EditText
                android:id="@+id/interest_total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_interest_total"
                android:inputType="number"
                tools:ignore="Autofill" />

        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>